<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.StartActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo_start"
        android:contentDescription="@string/moneyTracker"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="2"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/start_description"/>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintBottom_toTopOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_button_start" />
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/bg_intro_start"
        android:contentDescription="@string/signIn"/>
</androidx.constraintlayout.widget.ConstraintLayout>