<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.addItem.AddItemActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/add_item_expense"/>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:focusable="true"/>
           <requestFocus/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_price_hint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAB_add"
        android:layout_width="@dimen/FAB_size"
        android:layout_height="@dimen/FAB_size"
        android:src="@drawable/ic_done"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/FAB_margin"
        android:layout_marginBottom="@dimen/FAB_margin"/>
</LinearLayout>